Implement exportAllStatsToDir, removeSimulation - update monitoring of registration process.